[project]
name = "inbox-mcp-server"
version = "0.1.0"
authors = [{ name = "MCP Inbox", email = "example@example.com" }]
description = "A MCP server for sending notes to Inbox API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0", "mcp[cli]>=1.4.1"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/example/inbox-mcp-server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"