[project]
name = "memos-mcp-server"
version = "0.1.0"
authors = [{ name = "Leslie Leung", email = "lesily9@gmail.com" }]
description = "A MCP server for the Memos API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "mcp[cli]>=1.4.1", "requests>=2.32.3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/leslieleung/mcp-server-memos"
"Bug Tracker" = "https://github.com/leslieleung/mcp-server-memos/issues"

[project.scripts]
memos-mcp-server = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "memos"]
